--- a/index.html
+++ b/index.html
@@ -6,164 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="css_stylesheet" type="text/css" href="CSS/styling.css" />
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 
     <title>Amy's Personal Website</title>
   </head>
   <body>
     <!-- Navigation Bar-->
-    <nav class="navbar navbar-default">
-      <div class = "container-fluid">
-        <div class = "navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Navigation Toggle</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class = "navbar-brand" href="index.html">
-            <span><img alt = "Brand" src = "images/profilePicALT-noName.jpg"></span>
-            Amy Vargas
-          </a>
-        </div>
-        <div class="navbar-collapse collapse" id = "navbar">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <a href="index.html"> Home <span class="sr-only"></span></a>
-            </li>
-            <li>
-              <a href="about_me.html">About Me</a>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" id = "navbarDropdownMenuLink" href="projects.html" role="button" data-toggle="dropdown" aria-haspopup = "true" aria-expanded="false">
-                Software Projects
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/PlantMe-NJ_App">PlantMe-NJ</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/Energy-Supply-Project-Analysis-ESPA">Energy Supply Distribution Analysis</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="programming_projects/ACCR_Pro_Bono_Breakdown.html">ACCR Pro Bono Breakdown</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="projects_pages/SERVD_Notifications">SERVD Notifications</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/A-Vargas-GP.github.io">Portfolio Website</a>
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup = "true" aria-expanded="false">
-                Game Development
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="https://github.com/Boxman-Thesis-Org/Boxman_Game">Boxman: The Video Game</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/Drawdio-Application">Drawdio</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/Dining-Room-VR">The Dining Room VR</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/Baking_In_The_Woods">Baking In The Woods</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="https://github.com/A-Vargas-GP/Tic-Tac-Toe">Tic-Tac-Toe</a>
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false" aria-haspopup = "true">
-                3D Modeling
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="">The Dining Room</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Flower Vases</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Individual Hand</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Eye Monster UV Texture</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Female Robot Character</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Easter Eggs</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Amazon Box</a>
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false" aria-haspopup = "true">
-                3D Animation
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="">The Dining Room</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Body Hop</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Monster with Tail</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Eye Monster Hop</a>
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false" aria-haspopup = "true">
-                Graphic Design
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="">HomeSafe</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Scavenger Hunt Case Study</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">BrilliantBooks</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Making Smoothies</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">PlantMe-NJ</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Making Smoothies</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">User Screen Variety</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Music Interaction</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="">Trenton Shops</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class = "navbar-brand" href="index.html">
+        <span><img alt = "Brand" src = "images/profilePicALT-noName.png"></span>
+          Amy Vargas
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id = "navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"> Home <span class="sr-only"></span></a>
+          </li>
+          <li class = "nav-item">
+            <a class = "nav-link" href="about_me.html">About Me</a>
+          </li>
+          <li class = "nav-item">
+            <a class = "nav-link" href="portfolio-page.html">Portfolio</a>
+          </li>
+        </ul>
       </div>
+      <input type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-size="sm">
     </nav>
     <!-- End Bar -->
 
@@ -175,38 +49,83 @@
     <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
 
     <section class="dark-sec" id="projects">
-      <div class="container-fluid style-class">
+      <div class="container">
         <div class="row">
           <div class="col-md-12 text-center style-class">
-            <h3>Projects</h3>
+            <h3>Top Projects</h3>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4 col-lg-4">
-            <div class="panel panel-default projects-panel ">
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
-                <h2>Livehacks.tv<h2>
+                <h4>VR Classroom<h4>
               </div>
+            </div>
+            <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
                 Watch people develop hardware products.
               </div>
             </div>
           </div> 
-          <div class="col-md-4 col-lg-4">
-            <div class="panel projects-panel panel-default">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
-                <h2>Webapp</h2>
+                <h4>PlantMe-NJ</h4>
               </div>
+            </div>
+            <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
                 Productivity + Marketing tool
               </div>
             </div>
           </div> 
-          <div class="col-md-4 col-lg-4">
-            <div class="panel projects-panel panel-default">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
               <div class="panel-body projects-panel-body text-center">
-                <h2>Payment portal</h2>
+                <h4>Boxman: The Video Game</h4>
               </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Super simple payment portal
+              </div>
+            </div>
+          </div> 
+        </div>
+
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Drawdio<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Watch people develop hardware products.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>ACCR Pro Bono Breakdown</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Productivity + Marketing tool
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4>Energy Supply Distribution Analysis </h4>
+              </div>
+            </div>
+            <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
                 Super simple payment portal
               </div>
@@ -216,53 +135,8 @@
       </div>
     </section>
 
-    <!-- Image Boxes -->
-    <div class="container">
-      <!-- Row One -->
-      <div class="row">
-        <div class="col">
-          <!-- Programming Section-->
-          <article class="col-md-8 mx-auto">
-            <figure class="d-flex justify-content-center" >
-              <a href = "projects_pages/programming_projects.html"> <img src="images/pexels-pixabay-270348.jpg" class="img-thumbnail" alt="Programming Image" width="304" height="236"> </a>
-            </figure>
-            <p class="text-center"> Programming </p>
-          </article>
-        </div>
-        <div class="col">
-          <!-- Game Design Section-->
-          <article class="col-md-8 mx-auto">
-            <figure class="d-flex justify-content-center" >
-              <a href = "projects_pages/game_design.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236"> </a>
-            </figure>
-            <p class="text-center"> Game Design </p>
-          </article>
-        </div>
-      </div>
-      <!-- Row Two -->
-      <div class="row">
-        <div class="col">
-          <!-- 3D Modeling -->
-          <article class="col-md-8 mx-auto">
-            <figure class="d-flex justify-content-center" >
-              <a href = "projects_pages/3d_modeling.html"> <img src="images/Autodesk_Maya.png" class="img-thumbnail" alt="3D Modeling Image" width="304" height="236"> </a>
-            </figure>
-            <p class="text-center"> 3D Modeling </p>
-          </article>
-        </div>
-        <div class="col">
-          <!-- Graphic Design -->
-          <article class="col-md-8 mx-auto">
-            <figure class="d-flex justify-content-center" >
-              <a href = "projects_pages/graphic_design.html"> <img src="images/pexels-polina-zimmerman-3747279.jpg" class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
-            </figure>
-            <p class="text-center"> Graphic Design </p>
-          </article>
-        </div>
-      </div>
-    </div>
-    <!-- End Image Boxes-->
     <hr>
+    
     <!-- Footer Box-->
     <footer> 
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -277,8 +151,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
   </body>
 </html>
