--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="css_stylesheet" type="text/css" href="CSS/styling.css" />
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
     <title>Amy's Personal Website</title>
   </head>
   <body>
@@ -72,7 +73,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Play as Mall Santa, and brawl with mischevious kids.
               </div>
             </div>
           </div> 
@@ -84,7 +85,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Save the galaxy, uncover mysteries, and face challenges in dual perspectives as Boxman!
               </div>
             </div>
           </div> 
@@ -96,7 +97,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Mobile Drawing Application where users build visual & sonic environments.
               </div>
             </div>
           </div> 
@@ -110,7 +111,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Bake bread in a serene forest cabin with gathered ingredients.
               </div>
             </div>
           </div> 
@@ -122,7 +123,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Be immersed in a nostalgic VR environment... interact, teleport, and customize.
               </div>
             </div>
           </div> 
@@ -134,7 +135,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Classic game of tic-tac-toe where Xs vs. Os.
               </div>
             </div>
           </div> 
@@ -158,7 +159,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Gardening app for NJ crops, seasonal tips for success.
               </div>
             </div>
           </div> 
@@ -182,12 +183,12 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Track energy trends with Gas vs Oil vs Electric grid usage, promoting an efficiency analysis.
               </div>
             </div>
           </div> 
         </div>
-        <div class="card-deck mb-2 text-center" style="width: 15rem;">
+        <div class="card-deck mb-2 text-center">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
@@ -196,7 +197,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                words
+                WordPress site that showcases an IT business' services using language translation options.
               </div>
             </div>
           </div> 
@@ -220,19 +221,19 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Environmental model of a Victorian-inspired dining room.
               </div>
             </div>
           </div> 
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
-                <h4>Steampunk Library</h4>
+                <h4>Tinkerer Library</h4>
               </div>
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Steampunk-inspired environment scene reflective of a robotic character and its personality.
               </div>
             </div>
           </div> 
@@ -244,7 +245,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Complex and intricate model of a realistic flower-filled vase.
               </div>
             </div>
           </div> 
@@ -258,7 +259,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Realistic human hand designed using personal reference.
               </div>
             </div>
           </div> 
@@ -270,7 +271,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Model and rig of an Amazon delivery box.
               </div>
             </div>
           </div> 
@@ -282,7 +283,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Props designed for a steampunk-inspired environment scene.
               </div>
             </div>
           </div> 
@@ -306,7 +307,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                UI/UX website design for an IT business.
               </div>
             </div>
           </div> 
@@ -318,7 +319,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                UI Designs for a Home Security mobile app
               </div>
             </div>
           </div> 
@@ -356,7 +357,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Experience map that outlines the smoothie making process
               </div>
             </div>
           </div> 
@@ -368,13 +369,13 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                UI Designs for an NJ Gardening-based Android app
               </div>
             </div>
           </div> 
         </div>
-        <div class="card-deck mb-2 text-center" style="width: 30rem;">
-          <div class="card mb-4 shadow-sm" >
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
                 <h4>User Screen Variety<h4>
@@ -394,10 +395,22 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                UI Designs made for a melody playback on a Digital Audio Workspace (Max8) 
               </div>
             </div>
-          </div> 
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Header</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Description 
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
